--- a/index.html
+++ b/index.html
@@ -250,5 +250,6 @@
         <div class="copyright">
             <p>&copy; Copyright 2016<p>
         </div>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
